# campus-social-backend

./: .env.example  .gitignore  Dockerfile  README.md  Render_peizhiwenjian.yaml  database.py  main.py  pyproject.toml  render.yaml  requirements.txt
app/: config.py  database.py  main.py
app/api/v1/: exchanges.py  posts.py  users.py
app/models/: __init__.py  exchange_item.py  post.py  user.py
app/schemas/: exchange_item.py  post.py  user.py
app/services/: exchange_service.py  post_service.py  user_service.py
app/utils/: security.py
requirements/: dev.txt
